# djwala-ai

./: .env.example  .gitignore  Dockerfile  FLY_DEPLOYMENT.md  README.md  YOUTUBE_API_SETUP.md  docker-compose.yml  fly.toml  pyproject.toml
.github/workflows/: ci.yml
docs/: launch-copy.md  launch-posts.md
docs/plans/: 2026-02-27-djwala-ai-design.md  2026-02-27-djwala-ai-plan.md  2026-02-28-genre-aware-smart-estimation.md  2026-02-28-mvp-fix-and-ship.md  2026-03-01-byok-youtube-api-key-design.md  2026-03-01-cookies-multiartist-mobile.md  2026-03-01-mix-length-slider-design.md  2026-03-02-dj-deck-ui-design.md  2026-03-02-dj-deck-ui.md  2026-03-02-growth-roadmap-design.md  2026-03-02-music-player-ui-design.md  2026-03-02-music-player-ui-plan.md  2026-03-02-phase-b-timeline-party.md  2026-03-02-phase-c-mood-presets-design.md  2026-03-02-phase-c-mood-presets.md  2026-03-02-pwa-persistence-recovery-design.md  2026-03-02-pwa-persistence-recovery.md  2026-03-02-song-mode-design.md  2026-03-02-song-mode-plan.md  2026-03-08-oauth-integration-design.md  2026-03-08-oauth-integration-plan.md
scripts/: run.sh
src/djwala/: __init__.py  analyzer.py  auth.py  brain.py  cache.py  config.py  db.py  main.py  models.py  providers.py  session.py  youtube.py  youtube_api.py
static/: index.html  manifest.json  og-template.html  privacy.html  sw.js
static/js/: app.js  (+1 more)
tests/: conftest.py  test_analyzer.py  test_api.py  test_auth.py  test_brain.py  test_cache.py  test_config.py  test_db.py  test_integration.py  test_models.py  test_playlist_mode.py  test_providers.py  test_youtube.py
(+1 files in other folders)
